samples/_failures_safe/1761332612_d796b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ac8a9ae.c: In function ‘main’:
./samples/SAFE/__tmp_3ac8a9ae.c:151:21: error: expected declaration or statement at end of input
  151 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_3ac8a9ae.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3ac8a9ae.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3ac8a9ae.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3ac8a9ae.c:151:21: error: expected declaration or statement at end of input
